welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:18: error: not found: value fini
	case _ => fini = true
                  ^